--- a/PokemonGo.RocketAPI.GUI/Properties/Resources.resx
+++ b/PokemonGo.RocketAPI.GUI/Properties/Resources.resx
@@ -124,9 +124,6 @@
   <data name="Pstop" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Pstop.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="PstopLured" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\PstopLured.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="trainer" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\trainer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -582,5 +579,11 @@
   </data>
   <data name="_99" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\99.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="force_move" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\force_move.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pstop_lured" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pstop_lured.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
